--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -2,6 +2,7 @@
   padding: 10px 15px;
   @include link-border-radius;
   @include transition(all, 0.5s, ease);
+  @include font-size(20px);
   cursor: pointer;
   font-weight: 400;
   display: inline-block;
@@ -58,10 +59,6 @@
   height: 100%;
   img {
     width: 25px;
-  }
-  &:hover,
-  &:focus {
-    background: none;
   }
 }
 
