--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -80,7 +80,7 @@
 }
 
 @mixin text-capitalize {
-  text-transform: capitalize;
+  text-transform: capitalize !important;
 }
 
 @mixin text-uppercase {
