--- a/scss/modules/_dialog.scss
+++ b/scss/modules/_dialog.scss
@@ -7,17 +7,8 @@
     border-radius: inherit;
     .modal-header {
       border-bottom: 0;
-      .sec-header {
-        h1 {
-          font-family: Roboto;
-          @include font-size(50px);
-          font-weight: 300;
-          color: $basic-gray;
-          text-transform: capitalize;
-        }
-        .red-line {
-          height: 1px;
-        }
+      .modal-title {
+        width: 100%
       }
     }
     .modal-body {
