--- a/scss/main/main.scss
+++ b/scss/main/main.scss
@@ -114,3 +114,4 @@ $dir: ltr;
 @import "../state/checkout/checkout-shipping";
 @import "../state/checkout/checkout-payment";
 @import "../state/checkout/checkout-order";
+@import "../state/checkout/checkout-confirmation-order";
