moved translation to nav

--- a/scss/layouts/setting/_setting.scss
+++ b/scss/layouts/setting/_setting.scss
@@ -156,14 +156,9 @@
   .modal-title{
     margin-#{$left}: 37px;
     .sec-header{
+      margin-bottom: 0; 
       h1{
-      font-family: Roboto;
-      font-size: 30px !important;
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: normal;
+      @include text-capitalize;
       }
     }
   }
