added all the logic to get data from the server and view them in the checkout

--- a/scss/layouts/_product.scss
+++ b/scss/layouts/_product.scss
@@ -207,7 +207,7 @@
           align-self: center;
         }
         .btn-link_parent {
-          .btn-link {
+          .btn-add_review {
             font-family: Roboto;
             @include font-size(15px);
             color: $black;
