--- a/scss/layouts/authentication/_login.scss
+++ b/scss/layouts/authentication/_login.scss
@@ -15,7 +15,7 @@
       padding-left: 13px;
     }
   }
-  .btn-link {
+  .btn-gray {
     color: $charcoal-grey-two;
   }
   h1 {
@@ -54,7 +54,7 @@
       display: flex;
       justify-content: space-between;
       align-items: baseline;
-      .btn-link {
+      .btn-gray {
         background: inherit;
       }
     }
