--- a/scss/state/checkout/_checkout-confirmation-order.scss
+++ b/scss/state/checkout/_checkout-confirmation-order.scss
@@ -193,7 +193,7 @@
             display: flex;
             margin-top: 18px;
             margin-bottom: 18px;
-            .btn-link{
+            .btn-gray{
               display: none;
             }
           }
@@ -294,7 +294,7 @@
            height: 41px;
            display: flex;
            margin-top: 18px;
-           .btn-link{
+           .btn-gray{
              display: none;
            }
          }
@@ -499,7 +499,7 @@
             display: flex;
             margin-top: 18px;
             margin-bottom: 18px;
-            .btn-link{
+            .btn-gray{
               display: none;
             }
           }
@@ -601,7 +601,7 @@
            height: 41px;
            display: flex;
            margin-top: 18px;
-           .btn-link{
+           .btn-gray{
              display: none;
            }
          }
