--- a/scss/layouts/setting/_addresses.scss
+++ b/scss/layouts/setting/_addresses.scss
@@ -14,29 +14,16 @@
       text-align: $left;
       margin-top: 10px;
     }
-    .btn-link{
-      height: 41px;
-      margin-top: 10px;
-      display: flex !important;
-      background: $brand-color !important;
-      margin: 0px !important;
-      color: $white !important;
+    .btn-primary{
       .icon-add{
         @include font-size(23px);
-        margin-top: 5px;
         @include margin-left(10px);
+        &:before {
+          top: 5px;
+        }
       }
       span{
         @include margin-left(6px);
-        font-family: Roboto;
-        @include font-size(15px);
-        font-weight: normal;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: 41px;
-        letter-spacing: normal;
-        text-align: $left;
-        color: #ffffff;
         @include margin-right(10px);
       }
     }
@@ -100,12 +87,8 @@
         height: 41px;
         display: flex;
         margin-top: 18px;
-        .btn-link{
+        .btn-gray{
           @include margin-left(20px);
-          width: 66px;
-          text-align: center;
-          background: $light-gray !important;
-          border-radius: side-values(0 20px 20px 20px) !important;
           margin-#{$right}: 10px;
           color: $black;
           .icon-edit{
